@@ -1,5 +1,6 @@
 4.09 0000-00-00 Duncan Ferguson <duncan_ferguson@user.sf.net>
 - Add perl-5.24 Travis-CI automated testing config
+- Correct a logic bug around the --debug option
 
 4.08 2016-10-18 Duncan Ferguson <duncan_ferguson@user.sf.net>
 - Add perl-5.8, 5.10 and 5.12 to Travis-CI automated testing
